--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit>=1.28.0
 ultralytics>=8.0.0
-opencv-python-headless>=4.8.0
-numpy>=1.24.0
+opencv-python-headless>=4.8.0.74
+numpy>=1.24.0,<2.0.0
 Pillow>=10.0.0
 gdown>=4.7.0
 torch>=2.0.0
 torchvision>=0.15.0
+protobuf>=3.20.0,<4.0.0
